--- a/template.ejs
+++ b/template.ejs
@@ -3,13 +3,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= htmlWebpackPlugin.options.title %></title>
-
   <style>
-    
-  
-  
-  
+    * { font-family: 'Press Start 2P', cursive; }
+
+    button {
+
+      background: #6b6b6b;
+      border: 0;
+      border-radius: 100%;
+      height: 3em;
+      width: 3em;
+      color: white;
+      font-size: 1em;
+      margin: 1em;
+      box-shadow: inset -2px -1px 4px 0px #58355f;
+      cursor: pointer;
+
+    }
+
+    i { font-size: 1.6em; }
   </style>
+
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Graduate|IBM+Plex+Mono|Inconsolata|Patua+One|Press+Start+2P|Roboto+Mono|Share+Tech+Mono|Space+Mono|VT323" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
   <body>
     <% if (htmlWebpackPlugin.options.appMountId) { %>
@@ -18,3 +35,18 @@
   </body>
 </html>
 
+
+
+
+
+<!--
+font-family: 'Roboto Mono', monospace;
+font-family: 'Inconsolata', monospace;
+font-family: 'Patua One', cursive;
+font-family: 'VT323', monospace;
+font-family: 'Press Start 2P', cursive;
+font-family: 'Space Mono', monospace;
+font-family: 'IBM Plex Mono', monospace;
+font-family: 'Cutive Mono', monospace;
+font-family: 'Share Tech Mono', monospace;
+font-family: 'Graduate', cursive; -->
